--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ import Card from '../components/Card.astro';
 			/>
 			<Card
 				href="https://astro.build/chat/"
-				title="Tamino"
+				title="Tamino 2"
 				body="Come say hi to our amazing Discord community. ❤️"
 			/>
 		</ul>
