mobile Ansicht optimiert - anderes Banner

--- a/src/pages/index3.astro
+++ b/src/pages/index3.astro
@@ -52,6 +52,7 @@
         box-sizing: border-box; /* Stellt sicher, dass Padding und Border innerhalb der Breite enthalten sind */
       }
       .banner {
+        background-image: url('/images/banner_03.jpg'); /* Anderes Banner für mobile Ansicht */
         height: 300px; /* Festgelegte Höhe für Banner beibehalten */
       }
       .white-space {
