Ausrichtung Öffnungszeiten optimiert

--- a/src/pages/index3.astro
+++ b/src/pages/index3.astro
@@ -89,17 +89,33 @@
       </p>
       <p>
         Telefon: <span class="hidden-on-mobile">0 36 24 / 31 15 83</span>
-        <a href="tel:03624311583" class="visible-on-mobile">0 36 24 / 31 15 83</a><br>
+        <a href="tel:03624311583" class="visible-on-mobile">0 36 24 / 31 15 83</a>
+        <br>
         Telefax: 0 36 24 / 31 15 38
       </p>
       <div class="sub-header">ÖFFNUNGSZEITEN</div>
-      <p>
-        Mo 8 - 12 Uhr / 14 - 19 Uhr<br>
-        Di 8 - 12 Uhr / 14 - 17 Uhr<br>
-        Mi 8 - 12 Uhr<br>
-        Do 8 - 12 Uhr / 14 - 19 Uhr<br>
-        Fr 8 - 12 Uhr
-      </p>
+      <table>
+        <tr>
+          <td>Mo</td>
+          <td>8 - 12 Uhr / 14 - 19 Uhr</td>
+        </tr>
+        <tr>
+          <td>Di</td>
+          <td>8 - 12 Uhr / 14 - 17 Uhr</td>
+        </tr>
+        <tr>
+          <td>Mi</td>
+          <td>8 - 12 Uhr</td>
+        </tr>
+        <tr>
+          <td>Do</td>
+          <td>8 - 12 Uhr / 14 - 19 Uhr</td>
+        </tr>
+        <tr>
+          <td>Fr</td>
+          <td>8 - 12 Uhr</td>
+        </tr>
+      </table>
     </div>
     <div class="footer">
       <a href="#" aria-label="Wegbeschreibung zur Zahnarztpraxis">Ihr Weg zu uns</a>
